# lumflux

./: .gitattributes  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  design_document.md  readthedocs.yml  setup.cfg
.github/: ISSUE_TEMPLATE.md  pytest.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/file_input/: app_spec.yaml  file_input_app.py  mwe_app.py
examples/multi_scatter/: app_spec.yaml  multi_scatter.py
examples/mwe/: app_spec.yaml  mwe_app.py
examples/template/: app_spec.yaml  templated_app.py
lumflux/: __init__.py  _version.py  base.py  constructor.py  control_panels.py  controllers.py  loader.py  main_controllers.py  opts.py  pane.py  param.py  sources.py  support.py  template.py  theme.py  transforms.py  variables.py  views.py  widgets.py
tasks/: tests.py
tests/: __init__.py  test_lumflux.py
