[metadata]
name = lumflux
author = Jochem H. Smit
author_email = jhsmit@gmail.com
maintainer = Jochem H. Smit
maintainer_email = jhsmit@gmail.com
url = https://github.com/Jhsmit/lumflux
license = MIT
license_files = LICENSE
description = Illuminating web applications.

classifier =
    Natural Language :: English
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
install_requires =
    holoviews
    param
    panel
    pandas
    proplot
    matplotlib
    numpy
    pyyaml

python_requires =
    >=3.8

[options.extras_require]
docs =
    sphinx>=4.4.0
    ipykernel
    nbsphinx
    furo
    sphinx-copybutton
    sphinx-autodoc-typehints
    sphinx-autobuild
    sphinxcontrib-bibtex
dev =
    bandit
    black
    invoke
    mypy
    pylint
    pytest
    flake8


[versioneer]
VCS = git
style = pep440-pre
versionfile_source = lumflux/_version.py
versionfile_build = lumflux/_version.py
tag_prefix = ''

[flake8]
ignore = D203
exclude = .git,__pycache__,build,dist,docs
max-complexity = 10
